--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,5 +6,7 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: "Cormorant Garamond", serif;
+  overflow-x: hidden;
 }
